# cpp_zelda

./: .gitignore  .gitmodules  CMakeLists.txt  Functions.cmake  README.md  todo.txt
bootstrap/: Main.cpp
config/: animations.cfg  fonts.cfg  styles.cfg  textures.cfg  textures_out.cfg
graphics/animation/: attack.yaml  bamboo.yaml  leaf.yaml  magic.yaml  player.yaml  raccoon.yaml  spirit.yaml  squid.yaml
graphics/styles/: energy_bar.yaml  magic_bar.yaml  player_exp_textbox.yaml  weapon_overlay.yaml
scripts/: build.bat  configure.bat  generate_dir_listing.py
src/: Animation.h  Bar.cpp  Bar.h  Components.h  Constants.h  Debug.cpp  Debug.h  Enemy.cpp  Enemy.h  Entity.cpp  Entity.h  EntityBase.cpp  EntityBase.h  Game.cpp  Game.h  GamePlay.cpp  GamePlay.h  Level.cpp  Level.h  LevelView.cpp  LevelView.h  OstreamOverloads.h  ParticleFactory.cpp  ParticleFactory.h  Player.cpp  Player.h  PlayerStatus.cpp  PlayerStatus.h  Rect.cpp  Rect.h  Settings.cpp  Settings.h  Sprite.cpp  Sprite.h  SpriteGroup.cpp  SpriteGroup.h  Stub.cpp  Support.cpp  Support.h  TextureManager.cpp  (+7 more)
src/Core/: Animation.cpp  Animation.h  AnimationSequence.cpp  AnimationSequence.h  Application.cpp  Application.h  Base.h  Component.h  Debug.h  FontManager.h  GUIStyleManager.h  GameObject.cpp  GameObject.h  Group.cpp  Group.h  GroupManager.cpp  GroupManager.h  GuiStyle.cpp  GuiStyle.h  InflatableTextBox.cpp  InflatableTextBox.h  Iterator.h  Layer.h  LayerStack.cpp  LayerStack.h  OstreamOverloads.h  Rect.h  RectUtils.cpp  RectUtils.h  ResourceManager.cpp  ResourceManager.h  ResourceManager.inl  ResourceManagerUtils.cpp  ResourceManagerUtils.h  Serializable.h  Sprite.cpp  Sprite.h  SpriteAnimation.cpp  SpriteAnimation.h  SpriteData.cpp  (+10 more)
src/Core/Animation/: Animation.cpp  Animation.h  AnimationSequence.cpp  AnimationSequence.h  FrameGenerators.cpp  FrameGenerators.h  TextureAnimationSequence.cpp  TextureAnimationSequence.h
src/Core/ResourceManager/: AnimationManager.h  FontManager.h  GUIStyleManager.h  ResourceManager.cpp  ResourceManager.h  ResourceManager.inl  ResourceManagerUtils.cpp  ResourceManagerUtils.h  TextureManager.h
src/Core/UI/: Bar.cpp  Bar.h  InflatableTextBox.cpp  InflatableTextBox.h  TextureOverlay.cpp  TextureOverlay.h
tests/: CMakeLists.txt  Example.cpp  PlayerStatusTest.cpp  TestRect.cpp
